--- a/src/components/royals-root/royals-root.scss
+++ b/src/components/royals-root/royals-root.scss
@@ -1,12 +1,17 @@
 header {
   @include flex(row, space-between, center);
+  position: fixed;
+  top: 0;
   background: $dark-gray;
   color: $white;
+  width: 100%;
   height: 56px;
   padding: 0 10px;
+  box-sizing: border-box;
   @include default-box-shadow();
 }
 
 main {
+  margin-top: 56px;
   padding: 10px;
 }
