--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -2,4 +2,5 @@ $royal-blue: #004687;
 $royal-gold: #b89650;
 
 $white: #fff;
-$dark-gray: rgba(20, 20, 20, 0.85);
+$dark-gray: #373737;
+$light-gray: rgba(200, 200, 200, 0.9);
