--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -4,3 +4,8 @@ $royal-gold: #b89650;
 $white: #fff;
 $dark-gray: #373737;
 $light-gray: rgba(200, 200, 200, 0.9);
+
+$h1-size: 24px;
+$h2-size: 18px;
+$header-size: 10px;
+$row-size: 14px;
