add age to roster info

--- a/src/components/royals-roster-header/royals-roster-header.scss
+++ b/src/components/royals-roster-header/royals-roster-header.scss
@@ -9,6 +9,15 @@ header {
   @include flex(row, space-between, center);
 }
 
+.right-header {
+  @include flex(row, flex-end, center);
+}
+
 .jersey-number {
   width: 30px;
+}
+
+.age {
+  width: 30px;
+  text-align: right;
 }
