--- a/src/components/royals-roster-header/royals-roster-header.scss
+++ b/src/components/royals-roster-header/royals-roster-header.scss
@@ -17,7 +17,32 @@ header {
   width: 30px;
 }
 
+.bats-throws,
 .age {
-  width: 30px;
+  width: 40px;
   text-align: right;
+}
+
+.weight,
+.height {
+  display: none;
+  width: 50px;
+  text-align: right;
+}
+
+.college {
+  display: none;
+}
+
+@media (min-width: 400px) {
+  .weight,
+  .height {
+    display: block;
+  }
+}
+
+@media (min-width: 600px) {
+  .college {
+    display: block;
+  }
 }
