--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -4,6 +4,7 @@ $royal-gold: #b89650;
 $white: #fff;
 $dark-gray: #373737;
 $light-gray: rgba(200, 200, 200, 0.9);
+$row-hover-blue: rgba(0, 70, 135, 0.25);
 
 $h1-size: 24px;
 $h2-size: 18px;
